Se reemplaza el subtitulo

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">Your Best Ally to Grow Up Your Project</h1>
+                <!-- h1 id="homeHeading">Your Best Ally to Grow Up Your Project</h1 -->
+				<h1 id="homeHeading">The Best Way to Grow Up Your Business</h1>
                 <hr>
                 <p>StartupsBuilders can help you lay down the right way to convert a enterpreneur's dream to a fast-growing company</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
